--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ p.answer {
     background-size: cover;
     height: 300px;
     width: 100%;
-    max-width: 33.33333333%;
+    max-width: 25%;
 }
 [p20] {
     padding: 20px;
